Added about description

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>Maded by Yuriy Chukaev</p>
         <img class="portrait" src="/img/me.png">
     </div>
     
