--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,8 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>Maded by Yuriy Chukaev</p>
+        <p>Maded by Yuriy Chukaev
+        </p>
         <img class="portrait" src="/img/me.png">
     </div>
     
